<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item0"
        android:title="@string/item_menu0"
        app:showAsAction="never"

        />
    <item
        android:id="@+id/item1"
        android:title="@string/item_menu1"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/item2"
        android:title="@string/item_menu2"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/item3"
        android:title="@string/item_menu3"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/item4"
        android:title="@string/item_menu4"
        app:showAsAction="never"
        />
</menu>